--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Linkedin Boost",
+  "name": "Linkens",
   "description": "This Chrome extension helps you to add new contacts in the social network LinkedIn",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "default_locale": "en",
   "icons": {
     "128": "components/icon.png"
